package resources.dao.entities;

import model.Episode;
import resources.dao.DAOEntity;

public interface DAOEpisode extends DAOEntity<Episode> {
}
