package resources.dao.entities;

import model.InterestGroup;
import resources.dao.DAOEntity;

public interface DAOInterestGroup extends DAOEntity<InterestGroup> {
}
