package resources.dao.entities;

import model.Movie;
import resources.dao.DAOEntity;

public interface DAOMovie extends DAOEntity<Movie> {
}
