package resources.dao.entities;

import model.Season;
import resources.dao.DAOEntity;

public interface DAOSeason extends DAOEntity<Season> {
}
