package resources.dao.entities;

import model.Series;
import resources.dao.DAOEntity;

public interface DAOSeries extends DAOEntity<Series> {
}
